# Plugins

# make cdvdGigaherz
#if(cdvdGigaherz)
#	add_subdirectory(cdvdGigaherz)
#endif(cdvdGigaherz)

# make CDVDiso
if(CDVDiso)
	add_subdirectory(CDVDiso)
endif(CDVDiso)

# make CDVDisoEFP
if(CDVDisoEFP)
	add_subdirectory(CDVDisoEFP)
endif(CDVDisoEFP)

# make CDVDlinuz
if(CDVDlinuz)
	add_subdirectory(CDVDlinuz)
endif(CDVDlinuz)

# make CDVDnull
if(CDVDnull)
	add_subdirectory(CDVDnull)
endif(CDVDnull)

# make CDVDolio
if(CDVDolio)
	add_subdirectory(CDVDolio)
endif(CDVDolio)

# make CDVDpeops
#if(CDVDpeops)
#	add_subdirectory(CDVDpeops)
#endif(CDVDpeops)

# make dev9null
if(dev9null)
	add_subdirectory(dev9null)
endif(dev9null)

# make FWnull
if(FWnull)
	add_subdirectory(FWnull)
endif(FWnull)

# make GSdx
#if(GSdx)
#	add_subdirectory(GSdx)
#endif(GSdx)

# make GSnull
if(GSnull)
	add_subdirectory(GSnull)
endif(GSnull)

# make LilyPad
#if(LilyPad)
#	add_subdirectory(LilyPad)
#endif(LilyPad)

# make onepad
if(onepad)
	add_subdirectory(onepad)
endif(onepad)

# make PadNull
if(PadNull)
	add_subdirectory(PadNull)
endif(PadNull)

# make PeopsSPU2
if(PeopsSPU2)
	add_subdirectory(PeopsSPU2)
endif(PeopsSPU2)

# make SPU2null
if(SPU2null)
	add_subdirectory(SPU2null)
endif(SPU2null)

# make spu2-x
#if(spu2-x)
#	add_subdirectory(spu2-x)
#endif(spu2-x)

# make SSSPSXPAD
#if(SSSPSXPAD)
#	add_subdirectory(SSSPSXPAD)
#endif(SSSPSXPAD)

# make USBnull
if(USBnull)
	add_subdirectory(USBnull)
endif(USBnull)

# make xpad
#if(xpad)
#	add_subdirectory(xpad)
#endif(xpad)

# make zerogs
if(zerogs)
	add_subdirectory(zerogs)
endif(zerogs)

# make zeropad
if(zeropad)
	add_subdirectory(zeropad)
endif(zeropad)

# make zerospu2
if(zerospu2)
	add_subdirectory(zerospu2)
endif(zerospu2)

